--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Cabecera -->
     <header>
         <div class="header-title">
+            <img id="logo" alt="Logo" class="header-logo" src="" />
             <h1><span class="white">DISFRUTA</span> <span class="celeste">NUESTRO</span></h1>
             <h2><span class="white">CONTENIDO</span></h2>
             <p>
