--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <!-- Cabecera -->
     <header>
-        <div class="header-title">
-            <img id="logo" alt="Logo" class="header-logo" src="" />
+
+  <div id="logo-left"></div>  <!-- Contenedor para el logo izquierdo -->
+        
+<div class="header-title">
             <h1><span class="white">DISFRUTA</span> <span class="celeste">NUESTRO</span></h1>
             <h2><span class="white">CONTENIDO</span></h2>
             <p>
@@ -21,6 +23,9 @@
                 <span class="celeste">Android o IOS</span>
             </p>
         </div>
+
+ <div id="logo-right"></div>  <!-- Contenedor para el logo derecho -->
+
     </header>
     <!-- Fila de portadas con scroll infinito -->
     <div class="scroll-container">
