--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 <a href="URL_DE_INICIO" target="_self">Inicio</a>
 <a class="active" href="URL_DE_INFANTIL" target="_self">Infantil</a>
 <a href="URL_DE_SERIES" target="_self">Series</a>
+<a href="URL_DE_TERROR" target="_self">Terror</a>
 <a href="URL_DE_PELICULAS" target="_self">Películas</a>
 <a href="URL_DE_NOVELAS" target="_self">Novelas</a>
-<a href="URL_DE_SERIES" target="_self">Series</a>
+<a href="URL_DE_ACCION" target="_self">Acción</a>
 <a href="URL_DE_DOCUMENTALES" target="_self">Documentales</a>
 <a href="URL_DE_DORAMAS" target="_self">Doramas</a>
 <a href="URL_DE_ANIME" target="_self">Ánime</a>
