--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </div>
 
         <div class="header-title">
-            <h1><span class="white">DISFRUTA</span> <span class="celeste">NUESTRO</span></h1>
-            <h2><span class="white">CONTENIDO</span></h2>
+            <h1><span class="white">aRkAnA</span> <span class="celeste">pL▷Y</span></h1>
+            <h2><span class="white">Siempre nuevo, Siempre para ti</span></h2>
             <p>
-                <span class="white">en Streaming, </span>
-                <span class="celeste">a tu SMARTTV, </span>
-                <span class="white">o dispositivos, </span>
+                <span class="white">Disfruta, </span>
+                <span class="celeste">nuestro, </span>
+                <span class="white">o contenido, </span>
                 <span class="celeste">Android o IOS </span>
             </p>
         </div>
