--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <h2><span class="white">Siempre nuevo, Siempre para ti</span></h2>
             <p>
                 <span class="white">Disfruta, </span>
-                <span class="celeste">nuestro, </span>
-                <span class="white">o contenido, </span>
-                <span class="celeste">Android o IOS </span>
+                <span class="celeste">de todo, </span>
+                <span class="white">nuestro, </span>
+                <span class="celeste">contenido </span>
             </p>
         </div>
 
