--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <h1><span class="white">aRkAnA</span> <span class="celeste">pL▷Y</span></h1>
             <h2><span class="white">Siempre nuevo, Siempre para ti</span></h2>
             <p>
-                <span class="white">Disfruta, </span>
-                <span class="celeste">de todo, </span>
-                <span class="white">nuestro, </span>
+                <span class="white">Disfruta</span>
+                <span class="celeste">de todo</span>
+                <span class="white">nuestro</span>
                 <span class="celeste">contenido </span>
             </p>
         </div>
