--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="banner fade-slide" id="banner">
 <div class="banner-header">
 <div class="logo-container left-logo">
-<img alt="Logo Izquierdo" class="logo" src="URL_DE_TU_LOGO_AQUI"/>
+<img alt="Logo Izquierdo" class="logo" src="https://filedn.com/lXF8dCLhMORbweQ8fBllGF7/Logo.png"/>
 </div>
 
         <div class="header-title">
