--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
 <div class="logo-container right-logo">
-<img alt="Logo Derecho" class="logo" src="URL_DE_TU_LOGO_AQUI"/>
+<img alt="Logo Derecho" class="logo" src="https://filedn.com/lXF8dCLhMORbweQ8fBllGF7/Logo.png"/>
 </div>
 </div>
 </div>
