--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="banner fade-slide" id="banner">
 <div class="banner-header">
 <div class="logo-container left-logo">
-<img alt="Logo Izquierdo" class="logo" src="https://filedn.com/lXF8dCLhMORbweQ8fBllGF7/Logo.png"/>
+<img alt="Logo Izquierdo" class="logo" src="image/logo-izquierda.png"/>
 </div>
 
         <div class="header-title">
@@ -29,7 +29,7 @@
         </div>
 
 <div class="logo-container right-logo">
-<img alt="Logo Derecho" class="logo" src="https://filedn.com/lXF8dCLhMORbweQ8fBllGF7/Logo.png"/>
+<img alt="Logo Derecho" class="logo" src="image/logo-derecha.png"/>
 </div>
 </div>
 </div>
