--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="icon" type="image/png" href="image/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo de Películas y Series</title>
+    <title>Infantil-aRkAnA pLaY</title>
     
 <!-- Se vincula el archivo de estilo CSS -->
     <link rel="stylesheet" href="style.css"></head>
