--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="image/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infantil-aRkAnA pLaY</title>
+    <title>Infantil – aRkAnA pLaY</title>
     
 <!-- Se vincula el archivo de estilo CSS -->
     <link rel="stylesheet" href="style.css"></head>
