--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="icon" type="image/png" sizes="1024x1024" href="image/favicon.png">
+    <link rel="icon" type="image/x-icon" href="image/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infantil – aRkAnA pLaY</title>
