--- a/index.html
+++ b/index.html
@@ -58,7 +58,49 @@
 <a href="URL_DE_SERVICIOS" target="_self">Servicios</a>
 <a href="URL_DE_TIENDA" target="_self">Tienda</a>
 </nav>
-  
+ 
+
+<div class="container">
+    <div class="left-column">
+        <div id="search-result-msg" style="width: 100%; text-align: center; margin-bottom: 10px; display: none;">
+            <div id="search-result-title" style="font-size: 50px; font-weight: bold; color: #ffffff; margin-bottom: 8px;"></div>
+            <img id="search-result-image" src="https://cdn-icons-png.flaticon.com/512/2748/2748558.png" style="max-width: 180px; margin: 0 auto 8px; display: none;"/>
+            <div id="search-result-noresult" style="font-size: 25px; font-weight: bold; color: #ffffff; margin-bottom: 6px;"></div>
+            <div id="search-result-desc" style="font-size: 14px; color: #cccccc;"></div>
+        </div>
+        <!-- Ejemplo de películas -->
+        <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
+     <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
+     <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
+     <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
+     <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
+     <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
+    </div>
+    <div class="right-column">
+        <div class="search-box">
+            <input id="searchInput" type="text" placeholder="Buscar contenido..."/>
+            <button id="searchBtn" class="btn-estandar">BUSCAR</button>
+        </div>
+        <div class="visits-counter">
+            <h3>Visitas</h3>
+            <span id="visitCount">00005555</span>
+        </div>
+        <div class="ads">
+            <h3>Workspace</h3>
+            <a href="#"><img src="https://m.media-amazon.com/images/I/91gbE0ivKjL._UF894,1000_QL80_.jpg" alt="Publicidad"/></a>
+        </div>
+    </div>
+</div>
+
+<!-- Paginación -->
+<div id="dynamic-pagination-container">
+    <div id="pagination-header"></div>
+    <div id="pagination" style="display: none;"></div>
+</div>
+<div id="main-pagination"></div>
+
+<script src="script.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
