--- a/index.html
+++ b/index.html
@@ -5,144 +5,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infantil – aRkAnA pLaY</title>
-    
-<!-- Se vincula el archivo de estilo CSS -->
-    <link rel="stylesheet" href="style.css"></head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <!-- Cabecera -->
     <header>
-
-<div class="banner fade-slide" id="banner">
-<div class="banner-header">
-<div class="logo-container left-logo">
-<img alt="Logo Izquierdo" class="logo" src="image/logo-izquierda.png"/>
-</div>
-
-        <div class="header-title">
-            <h1><span class="white">aRkAnA</span> <span class="celeste">pL▷Y</span></h1>
-            <h2><span class="white">Siempre nuevo, Siempre para ti</span></h2>
-            <p>
-                <span class="white">Disfruta</span>
-                <span class="celeste">de todo</span>
-                <span class="white">nuestro</span>
-                <span class="celeste">contenido </span>
-            </p>
+        <div class="banner fade-slide" id="banner">
+            <div class="banner-header">
+                <div class="logo-container left-logo">
+                    <img alt="Logo Izquierdo" class="logo" src="image/logo-izquierda.png"/>
+                </div>
+                <div class="header-title">
+                    <h1><span class="white">aRkAnA</span> <span class="celeste">pL▷Y</span></h1>
+                    <h2><span class="white">Siempre nuevo, Siempre para ti</span></h2>
+                    <p>
+                        <span class="white">Disfruta</span>
+                        <span class="celeste">de todo</span>
+                        <span class="white">nuestro</span>
+                        <span class="celeste">contenido </span>
+                    </p>
+                </div>
+                <div class="logo-container right-logo">
+                    <img alt="Logo Derecho" class="logo" src="image/logo-derecha.png"/>
+                </div>
+            </div>
         </div>
-
-<div class="logo-container right-logo">
-<img alt="Logo Derecho" class="logo" src="image/logo-derecha.png"/>
-</div>
-</div>
-</div>
-
     </header>
-    <!-- Fila de portadas con scroll infinito -->
+
     <div class="scroll-container">
-        <div class="scroll-wrapper" id="scrollWrapper">
-            <!-- Las portadas se cargarán aquí con JavaScript -->
-        </div>
+        <div class="scroll-wrapper" id="scrollWrapper"></div>
     </div>
  
-<nav>
-<a href="URL_DE_INICIO" target="_self">Inicio</a>
-<a class="active" href="URL_DE_INFANTIL" target="_self">Infantil</a>
-<a href="URL_DE_SERIES" target="_self">Series</a>
-<a href="URL_DE_TERROR" target="_self">Terror</a>
-<a href="URL_DE_PELICULAS" target="_self">Películas</a>
-<a href="URL_DE_NOVELAS" target="_self">Novelas</a>
-<a href="URL_DE_ACCION" target="_self">Acción</a>
-<a href="URL_DE_DOCUMENTALES" target="_self">Documentales</a>
-<a href="URL_DE_DORAMAS" target="_self">Doramas</a>
-<a href="URL_DE_ANIME" target="_self">Ánime</a>
-<a href="URL_DE_PLATAFORMA" target="_self">Plataforma</a>
-<a href="URL_DE_SERVICIOS" target="_self">Servicios</a>
-<a href="URL_DE_TIENDA" target="_self">Tienda</a>
-</nav>
- 
+    <nav>
+        <a href="URL_DE_INICIO" target="_self">Inicio</a>
+        <a class="active" href="URL_DE_INFANTIL" target="_self">Infantil</a>
+        <a href="URL_DE_SERIES" target="_self">Series</a>
+        <a href="URL_DE_TERROR" target="_self">Terror</a>
+        <a href="URL_DE_PELICULAS" target="_self">Películas</a>
+        <a href="URL_DE_NOVELAS" target="_self">Novelas</a>
+        <a href="URL_DE_ACCION" target="_self">Acción</a>
+        <a href="URL_DE_DOCUMENTALES" target="_self">Documentales</a>
+        <a href="URL_DE_DORAMAS" target="_self">Doramas</a>
+        <a href="URL_DE_ANIME" target="_self">Ánime</a>
+        <a href="URL_DE_PLATAFORMA" target="_self">Plataforma</a>
+        <a href="URL_DE_SERVICIOS" target="_self">Servicios</a>
+        <a href="URL_DE_TIENDA" target="_self">Tienda</a>
+    </nav>
 
-<div class="container">
-    <div class="left-column">
-        <div id="search-result-msg" style="width: 100%; text-align: center; margin-bottom: 10px; display: none;">
-            <div id="search-result-title" style="font-size: 50px; font-weight: bold; color: #ffffff; margin-bottom: 8px;"></div>
-            <img id="search-result-image" src="https://cdn-icons-png.flaticon.com/512/2748/2748558.png" style="max-width: 180px; margin: 0 auto 8px; display: none;"/>
-            <div id="search-result-noresult" style="font-size: 25px; font-weight: bold; color: #ffffff; margin-bottom: 6px;"></div>
-            <div id="search-result-desc" style="font-size: 14px; color: #cccccc;"></div>
+    <div class="container">
+        <div class="left-column" id="infantilContainer">
+            <div id="search-result-msg" style="width: 100%; text-align: center; margin-bottom: 10px; display: none;">
+                <div id="search-result-title" style="font-size: 50px; font-weight: bold; color: #ffffff; margin-bottom: 8px;"></div>
+                <img id="search-result-image" src="https://cdn-icons-png.flaticon.com/512/2748/2748558.png" style="max-width: 180px; margin: 0 auto 8px; display: none;"/>
+                <div id="search-result-noresult" style="font-size: 25px; font-weight: bold; color: #ffffff; margin-bottom: 6px;"></div>
+                <div id="search-result-desc" style="font-size: 14px; color: #cccccc;"></div>
+            </div>
         </div>
-        <!-- Ejemplo de películas -->
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 1</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 2</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 3</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 3</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 3</div></a></div>
-    <div class="movie-card"><a href="#"><img src="https://via.placeholder.com/130x190?text=1" alt="Película 1"/><div class="title-overlay">Película de Aventura 1</div><div class="movie-title">Película de Aventura 3</div></a></div>
-    </div>
-    <div class="right-column">
-        <div class="search-box">
-            <input id="searchInput" type="text" placeholder="Buscar contenido..."/>
-            <button id="searchBtn" class="btn-estandar">BUSCAR</button>
-        </div>
-        <div class="visits-counter">
-            <h3>Visitas</h3>
-            <span id="visitCount">00005555</span>
-        </div>
-        <div class="ads">
-            <h3>Workspace</h3>
-            <a href="#"><img src="https://m.media-amazon.com/images/I/91gbE0ivKjL._UF894,1000_QL80_.jpg" alt="Publicidad"/></a>
+        <div class="right-column">
+            <div class="search-box">
+                <input id="searchInput" type="text" placeholder="Buscar contenido..."/>
+                <button id="searchBtn" class="btn-estandar">BUSCAR</button>
+            </div>
+            <div class="visits-counter">
+                <h3>Visitas</h3>
+                <span id="visitCount">00005555</span>
+            </div>
+            <div class="ads">
+                <h3>Workspace</h3>
+                <a href="#"><img src="https://m.media-amazon.com/images/I/91gbE0ivKjL._UF894,1000_QL80_.jpg" alt="Publicidad"/></a>
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Paginación -->
-<div id="dynamic-pagination-container">
-    <div id="pagination-header"></div>
-    <div id="pagination" style="display: none;"></div>
-</div>
+    <div id="dynamic-pagination-container">
+        <div id="pagination-header"></div>
+        <div id="pagination" style="display: none;"></div>
+    </div>
 
-<div id="main-pagination"></div>
-
-<script src="script.js"></script>
+    <div id="main-pagination"></div>
 
     <script src="script.js"></script>
 </body>
