--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                 <img id="search-result-image" src="https://cdn-icons-png.flaticon.com/512/2748/2748558.png" style="max-width: 180px; margin: 0 auto 8px; display: none;"/>
                 <div id="search-result-noresult" style="font-size: 25px; font-weight: bold; color: #ffffff; margin-bottom: 6px;"></div>
                 <div id="search-result-desc" style="font-size: 14px; color: #cccccc;"></div>
+
+<!-- Agrega esto justo después -->
+<div id="searchResultsContainer" style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px;"></div>
+
             </div>
         </div>
         <div class="right-column">
