--- a/peliculas/peliculas.html
+++ b/peliculas/peliculas.html
@@ -36,7 +36,7 @@
     </div>
  
     <nav>
-        <a href="URL_DE_INICIO" target="_self">Inicio</a>
+        <a href="../index.html" target="_self">Inicio</a>
         <a class="active" href="peliculas.html" target="_self">Películas</a>
         <a href="URL_DE_SERIES" target="_self">Series</a>
         <a href="URL_DE_TERROR" target="_self">Novelas</a>
@@ -110,7 +110,7 @@
 
     <div id="main-pagination"></div>
 
-
+<body data-category="TODAS">
     <script src="../script.js"></script>
 </body>
 </html>
