--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Infantil – aRkAnA pLaY</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body data-category="TERROR">
+
     <header>
         <div class="banner fade-slide" id="banner">
             <div class="banner-header">
@@ -36,8 +37,8 @@
     </div>
  
     <nav>
-        <a class="active" href="index.html" target="_self">Inicio</a>
-        <a href="peliculas/peliculas.html" target="_self">Películas</a>
+        <a href="URL_DE_INICIO" target="_self">Inicio</a>
+        <a class="active" href="URL_DE_INFANTIL" target="_self">Películas</a>
         <a href="URL_DE_SERIES" target="_self">Series</a>
         <a href="URL_DE_TERROR" target="_self">Novelas</a>
         <a href="URL_DE_PELICULAS" target="_self">Documentales</a>
@@ -71,10 +72,12 @@
                 <input id="searchInput" type="text" placeholder="Buscar contenido..."/>
                 <button id="searchBtn" class="btn-estandar">BUSCAR</button>
             </div>
+
             <div class="visits-counter">
                 <h3>Visitas</h3>
                 <span id="visitCount">00005555</span>
             </div>
+
 <aside class="sidebar-genre">
   <h3 class="sidebar-title">Géneros</h3>
   <ul class="genre-list">
@@ -97,10 +100,10 @@
 </aside>
             <div class="ads">
                 <h3>Workspace</h3>
+  <div class="ads-img-wrapper">
                 <a href="#"><img src="https://m.media-amazon.com/images/I/91gbE0ivKjL._UF894,1000_QL80_.jpg" alt="Publicidad"/></a>
             </div>
         </div>
-    </div>
 
 
     <div id="dynamic-pagination-container">
@@ -112,7 +115,5 @@
 
 
     <script src="script.js"></script>
-
-
 </body>
 </html>
