--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Infantil – aRkAnA pLaY</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body data-category="TERROR">
+<body data-category="INFANTIL">
 
     <header>
         <div class="banner fade-slide" id="banner">
@@ -33,8 +33,11 @@
     </header>
 
     <div class="scroll-container">
-        <div class="scroll-wrapper" id="scrollWrapper"></div>
+    <div class="scroll-wrapper" id="scrollWrapper">
+        <!-- JS insertará aquí cada portada con su info -->
     </div>
+</div>
+
  
     <nav>
         <a href="URL_DE_INICIO" target="_self">Inicio</a>
