--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <link rel="icon" type="image/x-icon" href="image/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infantil – aRkAnA pLaY</title>
+    <title>Inicio – aRkAnA pLaY</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body data-category="INFANTIL">
+<body data-category="HOME">
 
     <header>
+        <div class="header-background"></div>
         <div class="banner fade-slide" id="banner">
             <div class="banner-header">
                 <div class="logo-container left-logo">
@@ -40,8 +41,8 @@
 
  
     <nav>
-        <a href="URL_DE_INICIO" target="_self">Inicio</a>
-        <a class="active" href="URL_DE_INFANTIL" target="_self">Películas</a>
+        <a class="active" href="URL_DE_INICIO" target="_self">Inicio</a>
+        <a href="URL_DE_INFANTIL" target="_self">Películas</a>
         <a href="URL_DE_SERIES" target="_self">Series</a>
         <a href="URL_DE_TERROR" target="_self">Novelas</a>
         <a href="URL_DE_PELICULAS" target="_self">Documentales</a>
@@ -56,7 +57,7 @@
         <div class="left-column" id="infantilContainer">
 
             <!-- Texto de categoría -->
-            <div class="categoria-titulo" id="categoriaTitulo">CATEGORÍA: Películas</div>
+            <div class="categoria-titulo" id="categoriaTitulo" style="display:none;">INICIO</div>
 
             <div id="search-result-msg" style="width: 100%; text-align: center; margin-bottom: 10px; display: none;">
                 <div id="search-result-title" style="font-size: 50px; font-weight: bold; color: #ffffff; margin-bottom: 8px;"></div>
